--- a/DocumentManagemnetService/Views/PublicDocumentsView.xaml
+++ b/DocumentManagemnetService/Views/PublicDocumentsView.xaml
@@ -19,6 +19,8 @@
             <StackPanel Orientation="Horizontal">
                 <TextBox                     
                     Width="200"
+                                        materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"
+                    MaxLength="15"
                     materialDesign:HintAssist.Hint="Поиск"
                     Text="{Binding SearchQuery}"/>
                 <materialDesign:PackIcon Kind="Magnify" Height="26" Width="25" />
