--- a/DocumentManagemnetService/Views/RoutesView.xaml
+++ b/DocumentManagemnetService/Views/RoutesView.xaml
@@ -19,19 +19,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-            <StackPanel Orientation="Horizontal">
-                <TextBox
-                    Margin="10,0"
-                    Width="200"
-                    materialDesign:HintAssist.Hint="Поиск"
-                    Text="{Binding SearchQuery, UpdateSourceTrigger=PropertyChanged}"/>
-                <materialDesign:PackIcon Kind="Magnify" Height="26" Width="25" />
-            </StackPanel>
-            <ComboBox ItemTemplate="{StaticResource ComboBoxTemplate}" 
-                      ItemsSource="{Binding Categories}" 
-                      Margin="20,0,0,0" 
-                      materialDesign:HintAssist.Hint="Тип документа" Height="33" Width="156">
-            </ComboBox>
+            <StackPanel Orientation="Horizontal"/>
         </StackPanel>
 
         <ListBox Name="RoutesList" 
